# SonoffBoilerplate

./: .gitignore  CMakeLists.txt  DebouncedGPIO.cpp  DebouncedGPIO.h  EEPROMSettings.cpp  EEPROMSettings.h  GPIORelay.cpp  GPIORelay.h  InteruptGPIOButton.cpp  InteruptGPIOButton.h  MQTTConnection.cpp  MQTTConnection.h  MQTTInbound.cpp  MQTTInbound.h  MQTTOutbound.cpp  MQTTOutbound.h  OTAUpdate.cpp  OTAUpdate.h  README.md  SonoffApplicationCore.cpp  SonoffApplicationCore.h  SonoffApplicationShell.cpp  SonoffApplicationShell.h  SonoffBoilerplate.ino  SonoffInternalButton.cpp  SonoffInternalButton.h  SonoffRelay.cpp  SonoffRelay.h  SonoffWifi.cpp  SonoffWifi.h  flash.sh  log.txt  platformio.ini  scanOTA.sh  scantool.cfg  test.sh
.pioenvs/: .sconsign.dblite  structure.hash
.pioenvs/esp01_1m/: firmware.elf
ctestBuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ctestBuild/Testing/Temporary/: CTestCostData.txt
ctestBuild/test/: CTestTestfile.cmake  DebouncedGPIO_test  GPIORelay_test  InteruptButton_test  Makefile  SonoffApplicationCore_test  cmake_install.cmake
lib/InteruptGPIO/src/: InteruptGPIOButton.cpp  InteruptGPIOButton.h
lib/OTAUpdate/src/: OTAUpdate.cpp
lib/arduinoAdapters/: SerialLogger.cpp  SerialLogger.h
src/: DebouncedGPIO.cpp  DebouncedGPIO.h  EEPROMSettings.cpp  EEPROMSettings.h  GPIORelay.cpp  GPIORelay.h  InteruptGPIOButton.cpp  LightSwitch.cpp  LightSwitch.h  Logger.h  MQTTConnection.cpp  MQTTConnection.h  MQTTInbound.cpp  MQTTInbound.h  OTAUpdate.h  RelayLightSwitch.cpp  RelayLightSwitch.h  SonoffApplicationCore.cpp  SonoffApplicationCore.h  SonoffApplicationShell.cpp  SonoffApplicationShell.h  SonoffInternalButton.cpp  SonoffInternalButton.h  SonoffWifi.cpp  main.cpp
src/arduinoAdapters/: SerialLogger.cpp  SerialLogger.h
src/buttons/: DebouncedGPIO.h  SonoffInternalButton.cpp  SonoffInternalButton.h
src/debug/: Log.h  SerialLog.h
src/mqtt/: MQTTConnection.h  MQTTInbound.cpp  MQTTInbound.h  MQTTInboundCommand.cpp  MQTTInboundCommand.h  MQTTOutbound.cpp  MQTTOutbound.h  MQTTPubSubClientConnection.cpp  MQTTPubSubClientConnection.h
src/setup/: EEPROMSettings.cpp  EEPROMSettings.h  OTAUpdate.cpp  SonoffWifi.cpp  SonoffWifi.h
test/: .SonoffRelay.t.cpp.swp  CMakeLists.txt  DebouncedGPIO.t.cpp  FirstTest.cpp  GPIORelay.t.cpp  InteruptGPIO.t.cpp  MQTTInbound.t.cpp  MQTTOutbound.t.cpp  RelayLightSwitch.t.cpp  SonoffApplicationCore.t.cpp  SonoffRelay.t.cpp
test/arduinostub/: Arduino.cpp  Arduino.h  SString.cpp  SString.h  WString.cpp  WString.h
